--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
                 <p class="country-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
             </div>
         </section>
+
+        <section class="image-grid-container">
+            <div class="image-grid-content">
+                <div class="box" id="box-1" style="background-image: url(./Images/Rectangle\ 5.png);">Maldives</div>
+                <div class="box" id="box-2" style="background-image: url(./Images/Rectangle\ 8.png);">Indonesia</div>
+                <div class="box" id="box-3" style="background-image: url(./Images/Rectangle\ 6.png);">Srilanka</div>
+                <div class="box" id="box-4" style="background-image: url(./Images/Rectangle\ 7.png);">North America</div>
+                <div class="box" id="box-5" style="background-image: url(./Images/Rectangle\ 9.png);">Kashmir</div>
+                <div class="box" id="box-6" style="background-image: url(./Images/Rectangle\ 11.png);">Bangladesh</div>
+                <div class="box" id="box-7" style="background-image: url(./Images/Rectangle\ 10.png);">Bandarban</div>
+            </div>
+        </section>
     </main>
     <footer>
         
