added choose section

--- a/index.html
+++ b/index.html
@@ -118,6 +118,36 @@
                 <div class="box" id="box-7" style="background-image: url(./Images/Rectangle\ 10.png);">Bandarban</div>
             </div>
         </section>
+
+        <section class="choose-container">
+            <div class="choose-info">
+                <h1 class="choose-title">Why Choose Us</h1>
+                <p class="choose-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+
+            <div class="choose-second-section">
+                <div class="left-choose-content">
+                    <p class="choose-svg"><i class="fa-solid fa-hotel fa-2x"></i></p>
+                    <h1 class="choose-title-one">Handpicked Hotels</h1>
+                    <p class="choose-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+    
+                <div class="right-choose-content">
+                    <p class="choose-svg"><i class="fa-solid fa-map-location-dot fa-2x"></i></p>
+                    <h1 class="choose-title-two">World Class Service</h1>
+                    <p class="choose-description">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+            </div>
+
+            <div class="third-section">
+                <div class="choose-third-content">
+                    <p class="choose-svg"><i class="fa-solid fa-tag fa-2x"></i></p>
+                    <h1 class="choose-third-title">Best Price Guarantee</h1>
+                    <p class="choose-third-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+            </div>
+
+        </section>
     </main>
     <footer>
         
