--- a/index.html
+++ b/index.html
@@ -148,6 +148,20 @@
             </div>
 
         </section>
+
+        <section class="deals-container">
+            <div class="deals-content">
+                <h1 class="deals-title">Deals & Discounts</h1>
+                <p class="deals-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+
+            <div class="deals-background">
+                <div class="deals-img-one"></div>
+                <div class="deals-img-two"></div>
+                <div class="deals-img-three"></div>
+                <button class="deals-button">See All Packages</button>
+            </div>
+        </section>
     </main>
     <footer>
         
