simple place section added

--- a/index.html
+++ b/index.html
@@ -162,6 +162,30 @@
                 <button class="deals-button">See All Packages</button>
             </div>
         </section>
+
+        <section class="place-container">
+            <div class="a-simple">
+                <div class="left-place-content">
+                    <h1 class="place-title">A Simple Perfect Place To Get Lost</h1>
+                    <p class="place-desc">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+                    <li class="place-list">
+                        Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.
+                    </li>
+                    <li class="place-list">
+                        Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.
+                    </li>
+                    <button class="place-button">See More</button>
+                </div>
+    
+                <div class="place-image-container">
+                    <div class="place-image">
+                        <div class="place-img-title">
+                            <h1>Watch Our Mountain in Bangladesh</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
