form and travel section add

--- a/index.html
+++ b/index.html
@@ -186,6 +186,37 @@
                 </div>
             </div>
         </section>
+
+        <section class="form-container-two">
+            <div class="form-first">
+                <div class="form-content">
+                    <form class="form">
+                        <h1 class="form-title">Newsletter</h1>
+                        <p class="form-desc">Get your daily dose of travel news & tips. Sign up today!</p>
+                        <div class="hr"></div>
+                        <br>
+                        <div >
+                            <input class="input-name" type="text" name="text" placeholder="Enter your name">
+                        </div>
+                        <br>
+                        <div>
+                            <input class="input-name" type="email" placeholder="Enter your email">
+                        </div>
+                        <br>
+                        <button class="form-button">Subscribe</button>
+                    </form>
+                </div>
+    
+                <div class="travel-container">
+                    <div class="travel">
+                        <button class="travel-button">
+                            <p class="travel-title-last">Travel.com</p>
+                            <h1 class="travel-price">Save up to 70%</h1>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
