--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <header>
+    <header class="header">
         <section class="header-section">
             <nav class="nav-bar">
                 <div class="left-div">
@@ -37,7 +37,7 @@
                     </ul>
                 </div>
             </nav>
-            <div class="banner-container">
+            <div class="banner-container display">
                 <div class="banner-img">
                     <div class="banner-title">
                         <h1 class="travel-title">Explore Your Travel</h1>
@@ -72,8 +72,8 @@
             </div>
         </section>
     </header>
-    <main>
-        <section class="tour-container">
+    <main >
+        <section class="tour-container ">
             <div class="tour-content">
                 <div class="left-tour-container">
                     <h1 class="tour-title">Our Popular Tours</h1>
@@ -100,14 +100,14 @@
             
         </section>
 
-        <section class="country-container">
+        <section class="country-container ">
             <div class="country-info">
                 <h1 class="country-title">Choose Your Destination</h1>
                 <p class="country-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
             </div>
         </section>
 
-        <section class="image-grid-container">
+        <section class="image-grid-container ">
             <div class="image-grid-content">
                 <div class="box" id="box-1" style="background-image: url(./Images/Rectangle\ 5.png);">Maldives</div>
                 <div class="box" id="box-2" style="background-image: url(./Images/Rectangle\ 8.png);">Indonesia</div>
@@ -149,7 +149,7 @@
 
         </section>
 
-        <section class="deals-container">
+        <section class="deals-container ">
             <div class="deals-content">
                 <h1 class="deals-title">Deals & Discounts</h1>
                 <p class="deals-desc">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
@@ -163,7 +163,7 @@
             </div>
         </section>
 
-        <section class="place-container">
+        <section class="place-container ">
             <div class="a-simple">
                 <div class="left-place-content">
                     <h1 class="place-title">A Simple Perfect Place To Get Lost</h1>
@@ -187,7 +187,7 @@
             </div>
         </section>
 
-        <section class="form-container-two">
+        <section class="form-container-two ">
             <div class="form-first">
                 <div class="form-content">
                     <form class="form">
@@ -219,7 +219,25 @@
         </section>
     </main>
     <footer>
-        
+       <section class="footer-container">
+            <div class="footer-title">
+                <img  src="Images/Group 40071 (2).png" alt="">
+                <p class="footer-title-two">Sea <span>Travel</span></p>
+            </div>
+            <p class="footer-desc">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+
+            <div class="footer-icon">
+                <p><i class="fa-brands fa-twitter fa-2x"></i></p>
+                <p><i class="fa-brands fa-facebook fa-2x"></i></p>
+                <p><i class="fa-brands fa-instagram fa-2x"></i></p>
+                <p><i class="fa-brands fa-github fa-2x"></i></p>
+            </div>
+
+            <div class="footer-hr"></div>
+
+            <p class="footer-copy"><small>2017, All Rights Reserved.</small></p>
+       </section>
+
     </footer>
 </body>
 </html>
