--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </ul>
                 </div>
             </nav>
-            <div class="banner-container display">
+            <div class="banner-container ">
                 <div class="banner-img">
                     <div class="banner-title">
                         <h1 class="travel-title">Explore Your Travel</h1>
